<resources>
    <string name="app_name">ABC iview</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_channels">Channels</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="view_favourites">View Favourites</string>
    <string name="remove">Remove From Recently Watched</string>
    <string name="search_hint">
        <i>Enter Search Term</i>
    </string>
    <!-- Preference Titles -->
    <string name="parental_control_header">Parental Control</string>
    <string name="hide_adult_content_switch">Hide Adult Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
